# gitql

./: CMakeLists.txt  Dockerfile  README.md  TLexer.g4  TParser.g4  Taskfile.yml  known-issues.md  main.cpp
cmake/: ExternalAntlr4Cpp.cmake
include/: commit-info.h  commits-proc.h  config.hpp  constants.h  index-store.h  query-handler.h  query.hpp  query_visitor.hpp
src/: commit-info.cpp  commits-proc.cpp  config.cpp  index-store.cpp  query-handler.cpp  query.cpp  query_visitor.cpp
